# crm

./: .env  .tokeignore  Cargo.toml  _typos.toml  cliff.toml
crm/: Cargo.toml  build.rs  crm.yml
crm-metadata/: Cargo.toml  build.rs  metadata.yml
crm-metadata/src/: config.rs  lib.rs  main.rs
crm-metadata/src/abi/: mod.rs
crm-metadata/src/pb/: metadata.rs
crm-metadata/tests/: service.rs
crm-send/: Cargo.toml  build.rs
crm-send/src/: config.rs  lib.rs  main.rs
crm-send/src/abi/: email.rs  in_app.rs  mod.rs  sms.rs
crm-send/src/pb/: notification.rs
crm-send/tests/: service.rs
crm/src/: client.rs  config.rs  lib.rs  server.rs
crm/src/abi/: auth.rs  mod.rs
crm/src/pb/: crm.rs
fixtures/: cert.pem  key.pem  rootCA.pem  token
proto-builder-trait/: Cargo.toml
proto-builder-trait/src/: lib.rs
protos/: crm.proto
protos/crm/: messages.proto  rpc.proto
protos/metadata/: messages.proto  rpc.proto
protos/notification/: messages.proto  rpc.proto
protos/user-stats/: messages.proto
user-stat/: Cargo.toml  build.rs  user_stat.yaml
user-stat/examples/: gen.rs
user-stat/fixtures/: data.sql
user-stat/migrations/: 20240830065349_init.sql
user-stat/src/: config.rs  lib.rs  main.rs
user-stat/src/abi/: mod.rs
user-stat/src/pb/: user_stats.rs
user-stat/tests/: service.rs
