[workspace]
members = ["crm", "user-stat"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.86"
chrono = { version = "0.4.38", features = ["serde"] }
prost = "0.13.1"
prost-build = "0.13.1"
prost-types = "0.13.1"
serde = "1.0.209"
sqlx = { version = "0.8.1", features = [
    "chrono",
    "postgres",
    "runtime-tokio",
    "tls-rustls",
] }
tokio = { version = "1.39.3", features = ["rt", "rt-multi-thread", "macros"] }
tonic = { version = "0.12.2", features = ["zstd", "tls"] }
tonic-build = "0.12.2"
