[package]
name = "crm-metadata"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
derive_builder = "0.20.1"
fake = { version = "2.9.2", features = ["derive", "chrono"] }
futures = "0.3.30"
itertools = "0.13.0"
prost = { workspace = true }
prost-types = { workspace = true }
rand = "0.8.5"
serde = { workspace = true }
serde_yaml = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tokio-stream = "0.1.15"
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]

[build-dependencies]
anyhow = { workspace = true }
prost-build = { workspace = true }
proto-builder-trait = { workspace = true }
tonic-build = { workspace = true }
