[package]
name = "crm-send"
version = "0.1.0"
edition = "2021"

[features]
default = []
test_utils = ["fake", "nanoid"]


[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
derive_builder = { workspace = true }
futures = { workspace = true }
fake = { version = "2.9.2", features = ["derive", "chrono"], optional = true}
itertools = { workspace = true }
nanoid = { version = "0.4.0", optional = true }
prost = { workspace = true }
prost-types = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { version = "1.10.0", features = ["v4"] }

[dev-dependencies]
rand = "0.8.5"
crm-send = { workspace = true, features = ["test_utils"] }

[build-dependencies]
anyhow = { workspace = true }
prost-build = { workspace = true }
proto-builder-trait = { workspace = true }
tonic-build = { workspace = true }
